test/end-to-end/compile-errors/loop-disallowed-body.crow
main void()
	loop
		try
			break
		catch divide-by-0
			continue

	loop
		finally x
		break
